# legal-check-ai

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  ruff.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: contracts.py
app/core/: config.py  db.py  init_db.py
app/integrations/: llm_service.py
app/models/: analysis_result.py  base.py  contract.py
app/services/: contract_service.py
frontend/src/app/: page.tsx
migrations/: env.py
migrations/versions/: bc0e5494047d_initial_schema.py
